fix visible-xs-block

--- a/css/common.css
+++ b/css/common.css
@@ -7758,8 +7758,8 @@ body {
   .hidden-md-inline {
     display: none; } }
 
-@media (min-width: 480px) {
-  .visible-xs-inline {
+@media (min-width: 767px) {
+  .visible-xs-inline-block {
     display: inline-block; } }
 
 h1,
