--- a/scss/partials/_layout.scss
+++ b/scss/partials/_layout.scss
@@ -45,8 +45,8 @@ body {
         display:none;
     }
 }
-.visible-xs-inline{
-    @media (min-width:$screen-xs-min){
+.visible-xs-inline-block{
+    @media (min-width:$screen-xs-max){
         display:inline-block;
     }
 }
